--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-calendar": "^3.2.0",
     "react-dom": "^17.0.1",
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.165",
     "@types/react-calendar": "^3.1.2"
   }
 }
